# Infix

./: CMakeLists.txt  CMakeSettings.json  README.md  ReadMe.txt
Infix/: CMakeLists.txt  Infix.cpp
Infix/Infix_Engine/: Infix_Engine.h
Infix/Infix_Engine/Infix_Core/: stuff.txt
Infix/Infix_Engine/Infix_Core/Display/: Display.h
Infix/Infix_Engine/Infix_Core/Display/Graphics/: Graphics.h
Infix/Infix_Engine/Infix_Core/Display/Graphics/Context/: Application_Context.h  Command_Buffer.h  Command_Pool.h  Device_Context.h  Swap_Chain.h  Sync_Object.h
Infix/Infix_Engine/Infix_Core/Display/Graphics/Context/Memory_Context/: Buffer.h  Circular_Buffer.h  Texture_Context.h  Unifrorm_Buffer.h
Infix/Infix_Engine/Infix_Core/Display/Graphics/GraphicsCode/: Shaders.h
Infix/Infix_Engine/Infix_Core/Display/Graphics/GraphicsCode/Shaders/: compile.bat  shader.frag  shader.vert
Infix/Infix_Engine/Infix_Core/Display/Graphics/Window/Main_Window/: Main_Window.h
